# slides

./: 001-AMAG-PRECEDENTES.Rmd  001-AMAG-PRECEDENTES.html  002-AMAG-PRECEDENTES.Rmd  01-AMAG-PRECEDENTES.Rmd  01-AMAG-PRECEDENTES.html  01-AMAG-PRECEDENTES.lyx  01-AMAG-PRECEDENTES.tex  011-SUTRACOMASA.Rmd  17cea-dt-1.Rmd  17cea-dt-1.html  17cea-dt-2.Rmd  17cea-dt-2.html  17cea-dt-3.Rmd  17cea-dt-3.html  17cea-dt-4-prueba.Rmd  17cea-dt-4.Rmd  17cea-dt-4.html  17cea-dt-5-arbitraje.Rmd  17cea-dt-5.Rmd  17cea-dt-5.html  17cea-dt-6.Rmd  17cea-dt-6.html  17cea-dt-6a.Rmd  17cea-dt-6b.Rmd  18cea-dt-4.Rmd  18cea-dt-4.html  18cea-dt-5.Rmd  18cea-dt-5.html  18cea-dt-6-TLO.Rmd  2022-DPT-01-REFORMA-PROCESOS-LABORALES.Rmd  2022-DPT-01-REFORMA-PROCESOS-LABORALES.html  2022-DPT-02-PRINCIPIOS-FUNDAMENTOS.Rmd  2022-DPT-02-PRINCIPIOS-FUNDAMENTOS.html  2022-DPT-03-PODERES-JUECES-PRECEDENTES.Rmd  2022-DPT-03-PODERES-JUECES-PRECEDENTES.html  2022-DPT-04-PRETENSIONES-JUSTICIA-LABORAL.Rmd  2022-DPT-04-PRETENSIONES-JUSTICIA-LABORAL.html  2022-DPT-05-TIPOS-DE-PROCESOS-LABORALES.Rmd  2022-DPT-05-TIPOS-DE-PROCESOS-LABORALES.html  2022-DPT-06-ACTOS-PROCESALES-DEMANDA-CONTESTACION-SENTENCIA.Rmd  (+184 more)
Fira Code/noria-clj-master/: .gitignore  README.md  pom.xml
Fira Code/noria-clj-master/photon/: .gitignore  Cargo.toml  text_shaping.md
Fira Code/noria-clj-master/photon/script/: build  build_debug
Fira Code/noria-clj-master/photon/src/: diagnostic.rs  event_loop.rs  fonts.rs  harfbuzz.rs  images.rs  lib.rs  photon_api.rs  playground.rs  scene.rs
css/: my-fonts.css  my-theme.css
img/: mermaid-implicito
(+143 files in other folders)
