[package]
name = "photon"
version = "0.1.0"
authors = ["Pavel Sergeev <pavel.sergeev@jetbrains.com>"]
edition = "2018"

[features]
default = ["glutin/serde"]
debug = ["webrender/capture", "webrender/debugger", "webrender/profiler"]
invocation = ["jni/invocation"]

[profile.release]
debug = true
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#panic = 'abort'
#incremental = false
#overflow-checks = false

[dependencies]
log = "0.4"
env_logger = "0.6.1"
backtrace = "0.3"
euclid = "0.20"
serde = { version = "1.0", features = ["serde_derive"] }
app_units = "0.7.1"
gleam = "0.6"
glutin = "0.19"
clipboard = "0.5.0"
fxhash = "0.2.1"
crossbeam = "*"
thread_profiler = { version = "=0.1.3" }
dirs = { version = "1.0", optional = true }
lazy_static = "1.3.0"
bincode = "1.1.4"
itertools = "0.8.0"
font-kit = { version = "0.5.0" }
image = "0.22.1"
tinyfiledialogs = "=3.3.6"
bitflags = "1.2.1"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "playground"
path = "src/playground.rs"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.6"
cocoa = "0.18.4"

[dependencies.jni]
git = "https://github.com/SergeevPavel/jni-rs"
branch = "master"

[dependencies.harfbuzz]
 version = "=0.3.1"
 features = ["build-native-harfbuzz", "build-native-freetype"]

[dependencies.webrender]
git = "https://github.com/SergeevPavel/webrender"
rev = "7a2587acb45ba6552f86c9743ce31ceb616f364c"
